tests/snapshots/cli_help__cli_help_daemon_stop.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Stop the daemon

Usage: spotuify daemon stop

Options:
  -h, --help  Print help
