tests/snapshots/cli_help__cli_help_doctor.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Check config, auth, Spotify API access, and visible devices

Usage: spotuify doctor [OPTIONS]

Options:
      --format <FORMAT>  Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
