tests/snapshots/cli_help__cli_help_episodes.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
A flat, date-ordered episode feed across all the podcasts you follow

Usage: spotuify episodes [OPTIONS]

Options:
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --sort <SORT>              How to order the feed [default: newest] [possible values: newest, oldest, duration, title, show]
      --limit <LIMIT>            Maximum episodes to return [default: 100]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
      --refresh                  Bypass the cached feed and re-fetch from Spotify now
      --format <FORMAT>          Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help                     Print help
