tests/snapshots/cli_help__cli_help_eq.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Show or set the 10-band equalizer (applies on the spotuify device)

Usage: spotuify eq [OPTIONS] [PRESET]

Arguments:
  [PRESET]  Preset name (`rock`, `bass boost`, ...), or `presets` to list them

Options:
      --band <INDEX> <DB>        Set one band: `--band <INDEX> <DB>`, index 0-9, gain -12..12. Repeatable. Setting a band makes the curve Custom
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --reset                    Reset every band to 0 dB (the `Flat` preset)
      --format <FORMAT>          [default: table] [possible values: table, json, jsonl, csv, ids]
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
