tests/snapshots/cli_help__cli_help_events.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Stream the daemon's event broadcast as it happens

Usage: spotuify events [OPTIONS]

Options:
      --kind <KIND>              Only print this event kind. Repeatable; omit to print everything
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --once                     Exit after the first matching event
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
      --timeout <SECS>           Exit successfully after this many seconds with no matching event
      --format <FORMAT>          Output format [default: jsonl] [possible values: jsonl, table]
  -h, --help                     Print help
