tests/snapshots/cli_help__cli_help_library.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Cached library operations

Usage: spotuify library <COMMAND>

Commands:
  tracks  Print cached saved tracks and albums
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
